--- a/styles.css
+++ b/styles.css
@@ -165,3 +165,6 @@ footer{
 .social-menu ul li:nth-child(4) a:hover{
     background-color: #fff0;
 }
+.social-menu ul li:nth-child(5) a:hover{
+    background-color: #eb4924;
+}
