--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,10 @@ body {
 
 
 
+.result p{
+    font-size:2rem;
+    font-weight: bold;
+}
 
 header>h1
 {
@@ -63,14 +67,14 @@ header>h1
     font-family: 'Asap', sans-serif;
 }
 .choices{
-    margin: 50px 0 ;
+    margin: 20px 0 ;
     text-align: center;
 }
 .choice{
     border: 4px solid white;
     border-radius: 50%;
     padding: 10px;
-    margin:0 18px;
+    margin:0 15px;
     display: inline-block;
     transition: all 0.4s ease;
 
@@ -87,7 +91,7 @@ header>h1
     font-weight: bold;
     font-size: 35px;
     margin-top: 20px;
-    link
+    
 
 
 }
@@ -95,11 +99,14 @@ header>h1
 footer{
     background: white;
 }
+
+
+
 .social-menu ul{
     position: absolute;
     left: 50%;
     padding: 0 px;
-    margin: 15px ;
+    margin: 10px;
     transform: translate(-50%, -50%);
     display: flex;
 }
@@ -109,6 +116,7 @@ footer{
 .social-menu ul li{
   list-style: none;
   margin:0 6px;
+  margin-top: 40px;
 }
 
 .social-menu ul li .fa{
