--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,6 @@ body {
 
 
 
-.result p{
-    font-size:2rem;
-    font-weight: bold;
-}
 
 header>h1
 {
@@ -57,7 +53,7 @@ header>h1
 
 }
 .result {
-    font-size: 40px;
+    font-size: 30px;
     color:white;
 
 }
@@ -65,16 +61,17 @@ header>h1
     text-align: center;
     font-weight: bold;
     font-family: 'Asap', sans-serif;
+    margin-bottom: -40px;
 }
 .choices{
-    margin: 20px 0 ;
+    margin: 50px 0 ;
     text-align: center;
 }
 .choice{
     border: 4px solid white;
     border-radius: 50%;
     padding: 10px;
-    margin:0 15px;
+    margin:0 10px;
     display: inline-block;
     transition: all 0.4s ease;
 
@@ -89,9 +86,9 @@ header>h1
     color:white;
     font-family: 'Asap', sans-serif;
     font-weight: bold;
-    font-size: 35px;
-    margin-top: 20px;
-    
+    font-size: 30px;
+    margin-top: 10px;
+    margin-bottom: -20px;
 
 
 }
@@ -99,14 +96,11 @@ header>h1
 footer{
     background: white;
 }
-
-
-
 .social-menu ul{
     position: absolute;
     left: 50%;
     padding: 0 px;
-    margin: 10px;
+    margin: 10px ;
     transform: translate(-50%, -50%);
     display: flex;
 }
@@ -116,12 +110,11 @@ footer{
 .social-menu ul li{
   list-style: none;
   margin:0 6px;
-  margin-top: 40px;
 }
 
 .social-menu ul li .fa{
-   font-size:30px;
-   line-height: 60px;
+   font-size:25px;
+   line-height: 50px;
    transition: .6s;
    color: #000;
 
@@ -134,8 +127,8 @@ footer{
   .social-menu ul li a {
       position: relative;
       display:block;
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
       background-color: #fff;
       text-align: center;
